configs/tailscale/overlays/nishir/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai
  namespace: shikanime
  annotations:
    tailscale.com/proxy-group: nishir-ai-egress
    tailscale.com/tailnet-fqdn: ai.i.shikanime.studio
spec:
  type: ExternalName
  externalName: ai.i.shikanime.studio
  ports:
    - name: https
      port: 443
      protocol: TCP
